--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=ToDo_app
+APP_ENV=production
 APP_KEY=base64:xa86Nz7Lom5u9TTemFL3s4x391gNvk5UT1mtJZPDJhw=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_URL=https://bucketlists.shop/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
+LOG_LEVEL=error
 
 DB_CONNECTION=mysql
 DB_HOST=mysql
